xedoc-rs/tui-hooks/src/snapshots/xedoc_tui_hooks__browser__tests__hooks_browser_additional_context_limit.snap
---
source: tui-hooks/src/browser.rs
expression: "render_lines(&view, 112)"
---
                                                                                                                
  PreToolUse hooks                                                                                              
  Turn hooks on or off. Your changes are saved automatically.                                                   
                                                                                                                
  [x] Hook 1                                                                                                    
                                                                                                                
  Event     PreToolUse                                                                                          
  Matcher   Bash                                                                                                
  Source    User config - /tmp/hooks.json                                                                       
  Command   /tmp/pre-tool-use.sh                                                                                
  Timeout   30s                                                                                                 
  Context   unlimited                                                                                           
  Trust     Trusted                                                                                             
                                                                                                                
  Press space or enter to toggle; esc to go back
